
$Id: History,v 1.5 2000-01-19 19:24:25 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

   Please keep a summary of these message in geometry/History!

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

 Gen 19   2000	Gabriele Cosmo		geom-solid-bool-V01-00-00

  - Syncronized file versions with HEAD (essentially CVS headers changes)
  - Fixed cases of G4std::min which were not migrated on the HEAD in files:
    G4UnionSolid.cc and G4IntersectionSolid.cc

 Nov 24   1999 				geom-solid-bool-V00-01-05

  - Small fix in src/G4DisplacedSolid.cc to the return type 
         (const G4AffineTransform --> G4AffineTransform)
    to conform with the specification of the class.

 Nov 19   1999                          geom-solid-bool-V00-01-04

  -  Fixes from Vladimir, and additional tests

 Nov 10   1999                          geom-solid-bool-V00-01-03b

  - Renamed  GetConstituentSolid to GetConstituentMovedSolid in G4DisplacedSolid
     to avoid clashing with method that gets the contituents of a G4BooleanSolid.

 Nov 10   1999                          geom-solid-bool-V00-01-03a

  - Tag with additional methods for Persistency

 Nov 10   1999                          geom-solid-bool-V00-01-03-cand
