@@ -20,7 +20,6 @@
 #include "G4Polyhedron.hh"
 #include "G4NURBS.hh"
 #include "G4NURBSbox.hh"
-#include "G4VisExtent.hh"
 
 /////////////////////////////////////////////////////////////////////
 //
@@ -384,17 +383,7 @@ G4IntersectionSolid::ComputeDimensions( G4VPVParameterisation* p,
 void 
 G4IntersectionSolid::DescribeYourselfTo ( G4VGraphicsScene& scene ) const 
 {
-  return ;
-}
-
-/////////////////////////////////////////////////////////////
-//
-//
-
-G4VisExtent   
-G4IntersectionSolid::GetExtent        () const 
-{
-  return   G4VisExtent(-1.0,1.0,-1.0,1.0,-1.0,1.0) ;
+  scene.AddThis (*this);
 }
 
 ////////////////////////////////////////////////////
@@ -404,7 +393,12 @@ G4IntersectionSolid::GetExtent        () const
 G4Polyhedron* 
 G4IntersectionSolid::CreatePolyhedron () const 
 {
-  return new G4PolyhedronBox (1.0, 1.0, 1.0);
+  G4Polyhedron* pA = fPtrSolidA->CreatePolyhedron();
+  G4Polyhedron* pB = fPtrSolidB->CreatePolyhedron();
+  G4Polyhedron* resultant = new G4Polyhedron (pA->intersect(*pB));
+  delete pB;
+  delete pA;
+  return resultant;
 }
 
 /////////////////////////////////////////////////////////
@@ -414,10 +408,7 @@ G4IntersectionSolid::CreatePolyhedron () const
 G4NURBS*      
 G4IntersectionSolid::CreateNURBS      () const 
 {
-  return new G4NURBSbox (1.0, 1.0, 1.0);
+  // Take into account boolean operation - see CreatePolyhedron.
+  // return new G4NURBSbox (1.0, 1.0, 1.0);
+  return 0;
 }
-
-
-
-
-
