@@ -24,7 +24,6 @@
 #include "G4Polyhedron.hh"
 #include "G4NURBS.hh"
 #include "G4NURBSbox.hh"
-#include "G4VisExtent.hh"
 
 ///////////////////////////////////////////////////////////////////
 //
@@ -331,17 +330,7 @@ G4SubtractionSolid::ComputeDimensions( G4VPVParameterisation* p,
 void 
 G4SubtractionSolid::DescribeYourselfTo ( G4VGraphicsScene& scene ) const 
 {
-  return ;
-}
-
-/////////////////////////////////////////////////////////////
-//
-//
-
-G4VisExtent   
-G4SubtractionSolid::GetExtent        () const 
-{
-  return   G4VisExtent(-1.0,1.0,-1.0,1.0,-1.0,1.0) ;
+  scene.AddThis (*this);
 }
 
 ////////////////////////////////////////////////////
@@ -351,7 +340,12 @@ G4SubtractionSolid::GetExtent        () const
 G4Polyhedron* 
 G4SubtractionSolid::CreatePolyhedron () const 
 {
-  return new G4PolyhedronBox (1.0, 1.0, 1.0);
+  G4Polyhedron* pA = fPtrSolidA->CreatePolyhedron();
+  G4Polyhedron* pB = fPtrSolidB->CreatePolyhedron();
+  G4Polyhedron* resultant = new G4Polyhedron (pA->subtract(*pB));
+  delete pB;
+  delete pA;
+  return resultant;
 }
 
 /////////////////////////////////////////////////////////
@@ -361,10 +355,7 @@ G4SubtractionSolid::CreatePolyhedron () const
 G4NURBS*      
 G4SubtractionSolid::CreateNURBS      () const 
 {
-  return new G4NURBSbox (1.0, 1.0, 1.0);
+  // Take into account boolean operation - see CreatePolyhedron.
+  // return new G4NURBSbox (1.0, 1.0, 1.0);
+  return 0;
 }
-
-
-
-
-
